--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.24.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-lottie": "^1.2.4"
+    "react-lottie": "^1.2.4",
+    "viem": "2.x",
+    "wagmi": "^2.5.7"
   },
   "devDependencies": {
     "@types/node": "^20",
